2014-09-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Support xsi:type
	override attribute.
	(soap-decode-array): Likewise.

2014-09-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-parse-schema): Handle location attribute.

2014-08-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-type): Check that multiRef matched
	validation regexp.

2014-08-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-simple-type): Encode xsd:list
	nodes.
	(soap-decode-xs-simple-type): Decode xsd:list nodes.

2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-get-candidate-elements): Fix reference
	handling.

2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-simple-type): Add is-list slot.
	(soap-xs-parse-simple-type): Call soap-xs-add-list for xsd:list
	nodes.
	(soap-xs-add-list): New function.

2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-element): When a boolean is
	expected, interpret nil as "false".

2014-08-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-make-xs-basic-types): Add gYearMonth,
	gYear, gMonthDay, gDay and gMonth.

2014-07-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-time-format): New variable.
	(soap-encode-xs-basic-type): Handle dateTime, time, date,
	gYearMonth, gYear, gMonthDay, gDay and gMonth.
	(soap-decode-date-time): New function.
	(soap-decode-xs-basic-type): Use soap-decode-date-time.

2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-basic-type): Validate value after
	encoding.
	(soap-decode-xs-basic-type): Validate value before decoding.

2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-validate-xs-basic-type): New function.
	(soap-validate-xs-simple-type): Call soap-validate-xs-basic-type.
